<resources>
    <!--    MainMenu List-->
    <string-array name="page_list">
        <item>Happy New Year App</item>
        <item>Mail App</item>
        <item>Dice App</item>
        <item>Calculator App</item>
        <item>Guess My Number App</item>
        <item>BMI Calculation App</item>
        <item>ListView Sample App</item>
        <item>Dictionary App</item>
        <item>News App</item>
        <item>ConstraintLayout Practice</item>
        <item>Fitness App</item>
        <item>Movie Rental App</item>
    </string-array>
    <!--    Happy New Year-->
    <string name="app_name">My Kotlin App</string>
    <string name="image_description">happy new year image</string>
    <string name="text_view_string">From Ryosuke</string>
    <!--    Mail App-->
    <string name="to_edit_text_string">To:</string>
    <string name="subject_edit_text_string">Subject:</string>
    <string name="message_edit_text_string">message</string>
    <string name="button_string">send</string>
    <!--    Dice App-->
    <string name="button_name">ROLL</string>
    <!--    Calculator App-->
    <string name="button_zero">0</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    <string name="button_divide">/</string>
    <string name="button_time">*</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_clear">C</string>
    <string name="button_equal">=</string>
    <!--    GuessMyNumberApp-->
    <string name="success_text_view">Success</string>
    <string name="target_number_text_view">your number is %d</string>
    <string name="first_question">Is your number 5 ?</string>
    <string name="second_question">Is your number 3 ?</string>
    <string name="third_question">Is your number 2 ?</string>
    <string name="fourth_question">Is your number 1 ?</string>
    <string name="fifth_question">Is your number 4 ?</string>
    <string name="sixth_question">Is your number 7 ?</string>
    <string name="seventh_question">Is your number 6 ?</string>
    <string name="eighth_question">Is your number 9 ?</string>
    <string name="ninth_question">Is your number 8 ?</string>
    <string name="tenth_question">Is your number 10 ?</string>
    <string name="reset_button_string">reset</string>
    <string name="start_button_string">start</string>
    <!--    BMICalculationApp-->
    <string name="weight_text">Weight in kg</string>
    <string name="height_text">Height in cm</string>
    <string name="button_calculate">calculate</string>
    <!--    DictionaryApp-->
    <string name="edit_text_search_word">search your word</string>
    <string name="button_text_find">find</string>
    <!--    NewsApp-->
    <string name="button_text_search">search</string>
    <string name="button_text_load_more">load more</string>
    <string name="edit_text_search_topic">search your topic</string>
    <!--    ConstraintLayoutApp-->
    <string name="image_view_description">description</string>
    <string name="button_text_confirm">confirm</string>
    <string name="text_view_germany">germany</string>
    <string name="text_view_location">location</string>
    <string name="text_view_town">town</string>
    <string name="edit_text_your_location">your location</string>
    <string name="edit_text_your_town">your town</string>
    <!--    FitnessApp-->
    <string name="title_fitness_app">Exercise Number: (%d/%d)</string>
    <string name="text_view_exercise_tools">%d times</string>
    <string name="button_text_next">next</string>
    <string name="button_text_exit">exit</string>
    <string name="button_text_go">go</string>
    <string name="button_text_next_workout">next workout</string>
    <string name="button_text_try_again">try again</string>
    <string name="about_fitness">About</string>
    <string name="text_view_about_fitness">in this app we will learn about navigation.\n\nnavigation will give us a great
        view of
        our app
    </string>

    <!--    MovieRentalApp-->
    <string name="header_image_description">headerImage</string>
    <string name="poster_image_description">poster description</string>
    <string name="avengers_text">Marvel\'s Avengers: Infinity War</string>
    <string name="bookmark_description">bookmark description</string>
    <string name="movie_details_string">April 2018 12 149 minutes</string>
    <string name="rent">$4.99 Rent</string>
    <string name="buy">$14.99 Buy</string>
    <string name="rating_polygon_description">rating description</string>
    <string name="fab_rating_text">7,936 rating</string>
    <string name="fab_family_text">Family</string>
    <string name="fab_rotten_tomato_text">84%</string>
    <string name="fab_simalar_text">Similar</string>
    <string name="movie_description">Superheroes amass to stop intergalactic sociopath Thanos from acquiring a full set
        of Infinity Stones and wiping out half of all life in the universe.
    </string>


</resources>
