<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorApp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_margin="8dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorPrimary"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:weightSum="1"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginEnd="8dp"
                android:text="@string/button_one"
                android:textSize="18sp"
                android:layout_weight="0.25"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginEnd="8dp"
                android:text="@string/button_two"
                android:textSize="18sp"
                android:layout_weight="0.25"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginEnd="8dp"
                android:text="@string/button_three"
                android:textSize="18sp"
                android:layout_weight="0.25"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:text="@string/button_divide"
                android:textSize="18sp"
                android:layout_weight="0.25"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorPrimary"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:weightSum="1"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginEnd="8dp"
                android:text="@string/button_four"
                android:textSize="18sp"
                android:layout_weight="0.25"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginEnd="8dp"
                android:text="@string/button_five"
                android:textSize="18sp"
                android:layout_weight="0.25"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginEnd="8dp"
                android:text="@string/button_six"
                android:textSize="18sp"
                android:layout_weight="0.25"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:text="@string/button_minus"
                android:textSize="18sp"
                android:layout_weight="0.25"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorPrimary"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:weightSum="1"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginEnd="8dp"
                android:text="@string/button_seven"
                android:textSize="18sp"
                android:layout_weight="0.25"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginEnd="8dp"
                android:text="@string/button_eight"
                android:textSize="18sp"
                android:layout_weight="0.25"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginEnd="8dp"
                android:text="@string/button_nine"
                android:textSize="18sp"
                android:layout_weight="0.25"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:text="@string/button_plus"
                android:textSize="18sp"
                android:layout_weight="0.25"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorPrimary"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:weightSum="1"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginEnd="8dp"
                android:text="@string/button_clear"
                android:textSize="18sp"
                android:layout_weight="0.25"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginEnd="8dp"
                android:text="@string/button_zero"
                android:textSize="18sp"
                android:layout_weight="0.25"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginEnd="8dp"
                android:text="@string/button_time"
                android:textSize="18sp"
                android:layout_weight="0.25"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:text="@string/button_equal"
                android:textSize="18sp"
                android:layout_weight="0.25"/>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>