<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/the_guardianpng"
    tools:context=".NewsApp">

    <LinearLayout
        android:id="@+id/search_topic_section"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:layout_alignParentTop="true"
        android:weightSum="10"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/button_text_search"
            app:fontFamily="sans-serif"
            android:background="@color/colorAccent"
            android:onClick="searchTopic"/>

        <EditText
            android:id="@+id/edit_text_search_topic"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="7"
            android:hint="@string/edit_text_search_topic"
            android:inputType="text"
            app:fontFamily="sans-serif"/>

    </LinearLayout>

    <ListView
        android:id="@+id/list_view_news_contents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_below="@+id/search_topic_section"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:text="@string/button_text_load_more"
        app:fontFamily="sans-serif"
        android:onClick="loadMore"/>

</RelativeLayout>