<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMICalculation">

    <EditText
        android:id="@+id/edit_text_weight"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:inputType="number"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/weight_text"/>

    <EditText
        android:id="@+id/edit_text_height"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:inputType="number"
        android:layout_below="@+id/edit_text_weight"
        android:layout_centerHorizontal="true"
        android:hint="@string/height_text" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_below="@+id/edit_text_height"
        android:layout_centerHorizontal="true"
        android:text="@string/button_calculate"
        android:onClick="calculate"/>

    <TextView
        android:id="@+id/text_view_bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_calculate"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        app:fontFamily="sans-serif"
        tools:text="my bmi"/>

    <ImageView
        android:id="@+id/image_view_bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:src="@drawable/healthy"/>

</RelativeLayout>